Fixed spacing on the toggle show for session password

--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -72,7 +72,7 @@
   background: transparent;
   position: absolute;
   top: 35px;
-  right: 4px;
+  right: 8px;
   color: #0a66c2;
   font-size: 14px;
   font-weight: 600;
